Acerca de, productos y contacto agregado
Acerca de, productos y contacto agregado

--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
+.map-container{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+  }
+  .map-container iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
+  }
+
 html, body {
   height: 100%;
   width: 100%;
